tests/useless-ty-var/out.txt
error: mismatched types: expected unit, found unit -> int
  ┌─ err.sml:2:1
  │
2 │ val _: unit = f
  │ ^^^^^^^^^^^^^^^

typechecking failed
